my pitcha pie is ready... i hope... let's find out

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://edamor.github.io/pitcha-pie",
+  "homepage": "https://edamor.tech",
   "name": "my-pitcha-pie",
   "version": "0.1.0",
   "private": true,
