--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.31.0",
     "react-scripts": "4.0.1",
+    "resize-observer-polyfill": "^1.5.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
