--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.31.0",
+    "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "web-vitals": "^0.2.4"
